<resources>
    <string name="app_name">Stores</string>

    <string name="arg_id" translatable="false">key_id</string>

    <string name="dialog_delete_title">¿Delete store?</string>
    <string name="dialog_delete_confirm">Delete</string>
    <string name="dialog_delete_cancel">Cancel</string>
    <string name="dialog_option_title">¿What would you like to do?</string>

    <string name="description_img_photo">Imagen de la tienda</string>
    <string name="description_store_add">Crear tienda</string>

    <string name="edit_store_title_edit">Editar tienda</string>
    <string name="edit_store_message_update_success">Tienda Actualizada</string>
    <string name="edit_store_message_valid">Revise los campos requeridos</string>
    <string name="edit_store_message_save_success">Tienda agregada correctamente.</string>
    <string name="edit_store_title_add">Crear tienda</string>

    <string name="hint_name">nombre de la tienda</string>
    <string name="hint_phone">teléfono</string>
    <string name="hint_webside">url del sitio web</string>
    <string name="hint_phone_url">url de la imagen</string>

    <string name="helper_requiered">Requerido</string>

    <string name="menu_save">Save</string>

    <string name="main_error_no_webside">Esta tienda no cuenta con un sitio web</string>
    <string name="main_error_no_resolve">No se encontró ninguna app compatible</string>

    <string name="option_item_call">To call</string>
    <string name="option_item_website">Go to website</string>
    <string name="main_error">No se pudo realizar lo solicitado</string>
    <string name="main_error_get">Error al consultar datos</string>
    <string name="main_error_insert">Error al insertar</string>
    <string name="main_error_update">Error al actualizar</string>
    <string name="main_error_delete">Error al eliminar</string>
    <string name="main_error_unknown">Error desconocido</string>
</resources>