<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground"
    tools:context=".editModule.EditStoreFragment">

   
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/common_padding_default">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_name"
        app:helperText="@string/helper_requiered"
        app:endIconMode="clear_text"
        app:counterMaxLength="@integer/counter_max_name"
        app:counterEnabled="true"
        app:startIconDrawable="@drawable/ic_store"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="@integer/counter_max_name"
            android:inputType="textCapWords"/>
    </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPhone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/common_padding_default"
            android:hint="@string/hint_phone"
            app:helperText="@string/helper_requiered"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_local_phone"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="@integer/counter_max_phone"
                android:inputType="phone"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_default"
            android:hint="@string/hint_webside"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_baseline_link"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etWebside"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceCaption"
                android:textColor="@color/color_link"
                android:maxLines="@integer/lines_url_webside"
                android:minLines="@integer/lines_url_webside"
                android:inputType="textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/common_padding_default"
            android:gravity="center_vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPhotoUrl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_phone_url"
                app:helperText="@string/helper_requiered"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/ic_baseline_link"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPhotoUrl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceCaption"
                    android:textColor="@color/color_link"
                    android:minLines="@integer/lines_url_photo"
                    android:maxLines="@integer/lines_url_photo"
                    android:inputType="textMultiLine" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/imgPhoto"
                android:layout_width="@dimen/photo_size_thumb"
                android:layout_height="@dimen/photo_size_thumb"
                android:src="@drawable/ic_baseline_image"
                android:layout_marginStart="@dimen/common_padding_default"
                android:contentDescription="@string/description_img_photo"/>

        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>